--- a/第三章-数字.adoc
+++ b/第三章-数字.adoc
@@ -1,11 +1,13 @@
-== 有理数
+== 数字
 
-== Int
+=== 有理数
 
-== Num
+=== Int
 
-== BigInt
+=== Num
 
-== Fat
+=== BigInt
 
-== FatRat
+=== Fat
+
+=== FatRat
