--- a/第九章-类.adoc
+++ b/第九章-类.adoc
@@ -1,3 +1,5 @@
+== 类 
+
 Perl 6 有一个丰富的内置语法来定义和使用类。
 
 默认构造函数允许为创建的对象设置属性：
@@ -68,11 +70,11 @@ my $eat =
 $eat.perform();
 ----
 
-## 从类开始
+=== 从类开始
 
 和许多其他语言一样，Perl 6 使用 `class` 关键字来定义一个类。接下来的块可能包含任意代码，就像其他块一样，但类通常包含状态和行为声明。示例代码包括通过 `has` 关键字引入的属性（状态）以及通过 `method` 关键字引入的行为。
 
-声明一个类会创建一个新的*类型对象*，默认情况下，它将被安装到当前包中（就像使用 `our` 作用域声明的变量一样）。此类型对象是类的“空实例”。例如，`Int` 和 `Str` 等类型引用 Perl 6 内置类之一的类型对象。上面的示例使用类名称 `Task`，以便其他代码稍后可以引用它，例如通过调用 `new` 方法来创建类实例。
+声明一个类会创建一个新的 *类型对象*，默认情况下，它将被安装到当前包中（就像使用 `our` 作用域声明的变量一样）。此类型对象是类的“空实例”。例如，`Int` 和 `Str` 等类型引用 Perl 6 内置类之一的类型对象。上面的示例使用类名称 `Task`，以便其他代码稍后可以引用它，例如通过调用 `new` 方法来创建类实例。
 
 您可以使用 `.DEFINITE` 方法来确定你拥有的是实例还是类型对象：
 
@@ -96,7 +98,7 @@ say foo Int; # OUTPUT: «It's a type object!␤»
 say foo 42;  # OUTPUT: «It's an instance!␤» 
 ----
 
-== 状态
+=== 状态
 
 类块中的前三行声明所有属性（在其他语言中称为字段或实例存储）。就像 `my` 变量不能从其声明的作用域之外访问一样，属性不能在类的外面访问。这种封装是面向对象设计的关键原则之一。
 
@@ -142,7 +144,7 @@ method done() { return $!done }
 has Bool $.done is rw;
 ----
 
-rw特征会导致生成的访问器方法返回一些外部代码可以修改的内容以更改该属性的值。
+rw 特征会导致生成的访问器方法返回一些外部代码可以修改的内容以更改该属性的值。
 
 您还可以为属性提供默认值（对于有和没有访问者的情况，这些默认值同样适用）：
 
@@ -159,7 +161,7 @@ has Task @!dependencies;
 has $.ready = not @!dependencies;
 ----
 
-== 静态字段?
+=== 静态字段
 
 Perl 6 没有静态关键字。尽管如此，任何类都可以声明模块可以做的任何事情，所以使范围变量听起来像是个好主意。
 
@@ -176,7 +178,7 @@ class Singleton {
  
 ----
 
-由我或我们定义的类属性也可以在声明时初始化，但是我们在这里实现Singleton模式，并且必须在第一次使用时创建对象。预测执行属性初始化的时刻不是100％，因为它可以在编译，运行时或两者期间发生，尤其是在使用use关键字导入类时。
+由我或我们定义的类属性也可以在声明时初始化，但是我们在这里实现 Singleton 模式，并且必须在第一次使用时创建对象。预测执行属性初始化的时刻不是 100％，因为它可以在编译，运行时或两者期间发生，尤其是在使用 `use` 关键字导入类时。
 
 [source,perl6]
 ----
@@ -185,11 +187,11 @@ class HaveStaticAttr {
 }
 ----
 
-类属性也可以用辅助sigil声明 - 以类似于对象属性的方式 - 如果属性将被公开，将生成只读访问器。
+类属性也可以用辅助 sigil 声明 - 以类似于对象属性的方式 - 如果属性将被公开，将生成只读访问器。
 
-== 方法
+=== 方法
 
-虽然属性赋予对象状态，但方法赋予对象行为。我们暂时忽略新方法;这是一种特殊的方法。考虑第二种方法add-dependency，它将一项新任务添加到任务的依赖列表中。
+虽然属性赋予对象状态，但方法赋予对象行为。我们暂时忽略新方法; 这是一种特殊的方法。考虑第二种方法 `add-dependency`，它将一项新任务添加到任务的依赖列表中。
 
 [source,perl6]
 ----
@@ -198,9 +200,9 @@ method add-dependency(Task $dependency) {
 }
 ----
 
-在许多方面，这看起来很像一个子声明。但是，有两个重要的区别。首先，将此例程声明为方法将其添加到当前类的方法列表中，因此Task类的任何实例都可以使用它调用它。方法调用操作符。其次，一种方法将其调用者放入特殊变量self中。
+在许多方面，这看起来很像一个子声明。但是，有两个重要的区别。首先，将此例程声明为方法将其添加到当前类的方法列表中，因此 `Task` 类的任何实例都可以使用它调用它。方法调用操作符。其次，一种方法将其调用者放入特殊变量 `self` 中。
 
-该方法本身将传入的参数（它必须是Task类的一个实例）并将其推送到invocant的@！dependencies属性上。
+该方法本身将传入的参数（它必须是 `Task` 类的一个实例）并将其推送到 `invocant` 的 `@!dependencies` 属性上。
 
 执行方法包含依赖性处理程序的主要逻辑：
 
@@ -222,7 +224,7 @@ method perform() {
 
 在所有的依赖关系完成之后，通过直接调用 `&!` 回调属性来执行当前任务的任务。这是括号的目的。最后，该方法将 `$!done` 属性设置为 True，以便后续对该对象执行的调用（例如，如果此 Task 是另一个 Task 的依赖项）将不会重复该任务。
 
-== 私有方法
+=== 私有方法
 
 就像属性一样，方法也可以是私有的。私有方法声明带有前缀感叹号。他们使用 `self!` 调用. 随后是方法的名称。要调用另一个类的私有方法，调用类必须被调用类信任。信任关系是用信任声明的，而且要信任的类必须已经声明。调用另一个类的私有方法需要该类的实例和该方法的全限定名称。信任也允许访问私有属性
 
@@ -253,9 +255,9 @@ B.new.i-am-trusted();
 
 信任关系不受继承。要信任全局名称空间，可以使用伪包GLOBAL。
 
-== 构造函数
+=== 构造函数
 
-Perl 6比构造函数领域的许多语言更自由。构造函数是任何返回类实例的东西。而且，构造函数是普通的方法。您从基类Mu继承了一个名为new的默认构造函数，但您可以自由覆盖new，如下例所示：
+Perl 6 比构造函数领域的许多语言更自由。构造函数是任何返回类实例的东西。而且，构造函数是普通的方法。您从基类 `Mu` 继承了一个名为 **new** 的默认构造函数，但您可以自由覆盖 `new`，如下例所示：
 
 [source,perl6]
 ----
@@ -295,7 +297,7 @@ submethod BUILD(
 
 请参阅对象构造以获取更多影响对象构造和属性初始化的选项。
 
-== 消费我们的类
+=== 消费我们的类
 
 创建一个类后，您可以创建该类的实例。声明一个自定义构造函数提供了一种简单的方式来声明任务及其依赖关系。要创建没有依赖关系的单个任务，请写下：
 
@@ -335,7 +337,7 @@ making dinner
 eating dinner. NOM!
 ----
 
-== 继承
+=== 继承
 
 面向对象编程提供了继承的概念，作为代码重用的机制之一。 Perl 6 支持一个类从一个或多个类继承的能力。当一个类从另一个类继承时，它会通知方法调度器遵循继承链寻找一个派发方法。对于通过方法关键字定义的标准方法以及通过其他方式（如属性访问器）生成的方法，都会发生这种情况。
 
@@ -356,7 +358,7 @@ class Programmer is Employee {
 }
 ----
 
-现在，Programmer类型的任何对象都可以使用Employee类中定义的方法和访问器，就像它们来自Programmer类一样。
+现在，`Programmer` 类型的任何对象都可以使用 `Employee` 类中定义的方法和访问器，就像它们来自 `Programmer` 类一样。
 
 [source,perl6]
 ----
@@ -416,11 +418,11 @@ say $baker.cookbooks.perl;   # OUTPUT: «["The Baker's Apprentice"]␤»
 say $baker.salary;           # OUTPUT: «50000␤» 
 ----
 
-因为调度员会在Baker上移到父级之前看到厨师的烹饪方法，所以调用Baker的烹饪方法。
+因为调度会在 `Baker` 上移到父级之前看到 `Cook` 的 `cook` 方法，所以调用 `Baker` 的 `cook` 方法。
 
-要访问继承链中的方法，请使用重新分派或MOP。
+要访问继承链中的方法，请使用重新分派或 `MOP`。
 
-== 多重继承
+=== 多重继承
 
 如前所述，一个类可以从多个类继承。当一个类从多个类继承时，调度员知道在查找方法时要查看这两个类。 Perl 6 使用C3算法对多个继承层次进行线性化，这比深度优先搜索更好地处理多重继承。
 
@@ -444,11 +446,11 @@ $geek.cook('pizza');
 $geek.code_to_solve('P =? NP');
 ----
 
-现在所有可用于Programmer和Cook类的方法都可以从GeekCook类中获得。
+现在所有可用于 `Programmer` 和 `Cook` 类的方法都可以从 `GeekCook` 类中获得。
 
-虽然多重继承是知道和偶尔使用的有用概念，但重要的是要了解有更多有用的OOP概念。当达到多重继承时，最好考虑是否通过使用角色来更好地实现设计，这通常更安全，因为它们强制类作者明确地解决冲突的方法名称。有关角色的更多信息，请参阅角色。
+虽然多重继承是知道和偶尔使用的有用概念，但重要的是要了解有更多有用的 OOP 概念。当达到多重继承时，最好考虑是否通过使用角色来更好地实现设计，这通常更安全，因为它们强制类作者明确地解决冲突的方法名称。有关角色的更多信息，请参阅角色。
 
-== also 声明符
+=== also 声明符
 
 通过在特征前加上也可以在类声明主体中列出要继承的类。这也适用于角色组合特质。
 
@@ -465,7 +467,7 @@ role B {};
 class C { also does A; also does B }
 ----
 
-== 自省
+=== 自省
 
 自省是在程序中收集有关某些对象的信息的过程，而不是通过阅读源代码，而是通过查询对象（或控制对象）来获取某些属性，例如其类型。
 
@@ -492,13 +494,13 @@ code_to_solve, known_languages, favorite_editor
 Programmer
 ----
 
-前两个测试每个智能匹配类名称。如果对象是该类或继承类，则返回 true。因此，所讨论的对象是 Employee 类，或者是继承它的类，但不是 GeekCook。
+前两个测试每个智能匹配类名称。如果对象是该类或继承类，则返回 true。因此，所讨论的对象是 `Employee` 类，或者是继承它的类，但不是 `GeekCook`。
 
 `.WHAT` 方法返回与对象 `$o` 关联的类型对象，它告诉我们 `$o` 的确切类型：在这种情况下是 Programmer。
 
 `$o.perl` 返回一个可以作为 Perl 代码执行的字符串，并且再现原始对象 `$o`。虽然这在所有情况下都不能很好地工作，但它对调试简单对象非常有用。 `$o.^methods(:local)` 产生一个可以在 `$o` 上调用的方法列表。 `:local` 命名参数将返回的方法限制为在 Programmer 类中定义的方法，并排除继承的方法。
 
-使用 `.^` 而不是单个点调用方法的语法意味着它实际上是对其元类的一个方法调用，该类是管理 Programmer 类的属性的类 - 或者您感兴趣的任何其他类。类也启用了其他自省方式：
+使用 `.^` 而不是单个点调用方法的语法意味着它实际上是对其元类的一个方法调用，该类是管理 `Programmer` 类的属性的类 - 或者您感兴趣的任何其他类。类也启用了其他自省方式：
 
 [source,perl6]
 ----
@@ -508,11 +510,11 @@ say $o.^parents.map({ $_.^name }).join(', ');
 
 最后，`$o.^name` 调用元对象的名称方法，这毫不意外地返回类名称。
 
-自省对于调试和学习语言和新库非常有用。当一个函数或方法返回一个你不知道的对象时，用.WHAT查找它的类型，用 `.perl` 等等来查看它的构造方法，你会很清楚它的返回值是什么。使用 `.^` 方法，您可以了解您可以对课程做些什么。
+自省对于调试和学习语言和新库非常有用。当一个函数或方法返回一个你不知道的对象时，用 `.WHAT` 查找它的类型，用 `.perl` 等等来查看它的构造方法，你会很清楚它的返回值是什么。使用 `.^` 方法，您可以了解您可以对课程做些什么。
 
 但也有其他应用程序：将对象序列化为一串字节的例程需要知道该对象的属性，可以通过内省查找该对象的属性。
 
-== 重写默认的 gist 方法
+=== 重写默认的 gist 方法
 
 有些类可能需要它自己的版本，它会覆盖当被调用以提供类的默认表示时被打印的简洁方式。例如，异常可能只想写入有效负载而不是完整对象，以便更清楚发生了什么。但是，每个班级你都可以这样做：
 
@@ -542,6 +544,7 @@ say Cook.gist; # OUTPUT: «⚗Cook⚗»
 say $cook.gist; # OUTPUT: «⚗ Cooks with spoon ‣ ladle ‣ knife ‣ pan using «Cooking for geeks» and «The French Chef Cookbook»␤»
 ----
 
-通常你会想定义两个方法，一个用于类，另一个用于实例;在这种情况下，类方法使用alambic符号，下面定义的实例方法聚合了我们在厨师上的数据以叙述方式显示。
+通常你会想定义两个方法，一个用于类，另一个用于实例; 在这种情况下，类方法使用 alambic 符号，下面定义的实例方法聚合了我们在厨师上的数据以叙述方式显示。
 
-1. 例如，封闭不容易以这种方式复制;如果你不知道封闭是什么，不要担心。此外，当前的实现方式在倾倒循环数据结构方面存在问题，但预期它们可以在某些时候由.perl正确处理。
+1. 例如，封闭不容易以这种方式复制;如果你不知道封闭是什么，不要担心。此外，当前的实现方式在倾倒循环数据结构方面存在问题，但预期它们可以在某些时候由 `.perl` 正确处理。  
+
