--- a/第二十九章-运算符.adoc
+++ b/第二十九章-运算符.adoc
@@ -1,4 +1,6 @@
-== zip
+== 运算符
+
+=== zip
 
 输出下面的文本:
 
@@ -29,7 +31,7 @@ list = [ {'date': '2010-04-01','people': 1047, 'hits': 4522},
        ]
 ----
 
-== «
+=== «
 
 [source,perl6]
 ----
@@ -37,9 +39,9 @@ my @days = Date.new('2019-04-01') .. Date.new('2019-04-10');
 .say for "/perl6/" «~« @days;
 ----
 
-== feed 
+=== feed 
 
-=== infix ==>
+==== infix ==>
 
 [source,perl6]
 ----
@@ -86,7 +88,7 @@ my @result =
 
 注: 在将来, 这个操作符会在它获得并行地运行列表操作的能力之后有所变化。它会强制左侧的操作数作为一个闭包(它能被克隆并运行在子线程中)变得可闭合。
 
-=== infix <==
+==== infix <==
 
 这个向左的流操作符从右侧接收结果并把结果作为最后的一个参数传递给它前面的(左侧的)例程。这为一系列列表操作函数阐明了从右到左的数据流。
 
@@ -127,7 +129,7 @@ my @result =
 
 注意: 在将来, 这个操作符会在它获得并行地运行列表操作的能力之后有所变化。它会强制右侧的操作数作为一个闭包变得可闭合(它能被克隆并运行在子线程中)
 
-== 超运算符
+=== 超运算符
 
 超运算符与子例程
 
@@ -187,7 +189,7 @@ my $x=@a;  # 或者使用 $x =@('A','G','C','T')
 for 1 ...^ * -> $a {(([X~] $x xx $a)).join(',').say;last if $a==4;}
 ----
 
-== Z
+=== Z
 
 `Z` 像一个拉链那样把列表插入进来， 只要第一个输入列表耗尽就停止：
 
@@ -213,7 +215,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 1ax 2bx 3cx
 ----
 
-== X
+=== X
 
 `X` 从所有列表创建一个外积。最右边的元素变化得最迅速。
 
@@ -243,7 +245,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 (1a9 1b9 1c9 2a9 2b9 2c9 3a9 3b9 3c9)
 ----
 
-== infix ...
+=== infix ...
 
 序列操作符是一个用于产生惰性列表的普通操作符。
 
@@ -251,7 +253,7 @@ say 1..3 Z~ <a b c> Z~ 'x' xx 3;
 
 序列操作符会使用尽可能多的参数来调用生成器。参数会从初始元素和已生成元素中获取。
 
-默认的生成器是 `*.succ` 或 `*.pred` ， 取决于末端怎么比较：
+默认的生成器是 `\*.succ` 或 `*.pred` ， 取决于末端怎么比较：
 
 [source,perl6]
 ----
@@ -261,7 +263,7 @@ say 'a' ... 'e';    # a b c d e
 say 'e' ... 'a';    # e d c b a
 ----
 
-`*` (Whatever) 末端生成一个无限序列，使用的是默认的生成器 `*.succ`。
+`\*` (Whatever) 末端生成一个无限序列，使用的是默认的生成器 `*.succ`。
 
 [source,perl6]
 ----
@@ -314,7 +316,7 @@ say 1, 2, 4, 8, 16 ... $end;
 # outputs 1 2 4
 ----
 
-== ...
+=== ...
 
 - 计算哪些日子是周六：
 
