--- a/第八章-副词.adoc
+++ b/第八章-副词.adoc
@@ -1,4 +1,6 @@
-== 副词的 Pair 形式
+== 副词
+
+=== 副词的 Pair 形式
 
 现在有一个普通的副词形式的 Pair 记号，也是人们所熟知的 "colon pair"（冒号对）形式。下面的表格展示了和胖箭头记号相一致的记号：
 
@@ -119,43 +121,48 @@
 
 所有的副词形式（包括普通的带有标识符键的副词）被认为是特殊的令牌(tokens)并且除了能在项的位置上被识别，也能在各种不同的位置上被识别。特别地，当把它用在中缀的位置上时，它们修改了之前的顶端的优先级比"loose unary"紧凑的操作符：
 
-```perl6
+[source,perl6]
+----
 1 == 100 :fuzz(3)   # 调用: infix:<==>(1, 100, fuzz => 3)
-```
+----
 
 在声明内部副词形式用于重命名参数声明：
 
-```perl6
+[source,perl6]
+----
 sub foo ( :externalname($myname) ) { ... }
-```
+----
 
 副词修改了各种引号形式的意义：
 
-```perl6
-
+[source,perl6]
+----
 q:x 'cat /etc/passwd'
-```
+----
 
 当副词被追加到标识符（即，在后缀位置上）后面时，副词形式的语法用于生成那个标识符的唯一变体；该语法用于命名诸如 `infix:<+>` 这样的操作符和诸如 `statement_control:if` 这样的多重分发文法规则。当这样用时，副词被认为是名字的一部分，所以 `infix:<+>` 和 `infix:<->` 是两个不同的操作符。同样地, `prefix:<+>` 不同于 `infix<+>`。（这种记法的好处有把不同的标识符分组到容易访问的集合中，例如，这就是 Perl 6 标准文法时如何知道当前中缀操作符集合的）。
 
 只有能产生一列一个或更多值（偏好字符串）的标识符被允许作为名字扩展；特殊地，闭包不能作为值，所以 `:{...}` 形式的副词不能被允许作为名字扩展。特别地，这把方法名后面的 block 空了出来，所以它允许我们把 block 解析为方法的参数：
 
-```perl6
+[source,perl6]
+----
 @stuff.sort:{ +$_ }
-```
+----
 这些看起来它们使用的是 pairs，实际上它们等价于：
 
-```perl6
+[source,perl6]
+----
 @stuff.sort: { +$_ }
-```
+----
 
-所以这儿的冒号真得不是在引入 pairs，而是引入了该方法的参数列表。在其他任何位置，`:{...}` 会使用两种用法的一种，根据花括号定义的是闭包还是散列。如果被当做闭包， `:{...}` 会创建把空键(null)映射到闭包的 pair。如果被当做散列构造器，那么空键会被忽略，并且 `:{...}` 会创建一个以对象为键的散列而非像没有冒号的 `{...}`那样创建一个以字符串为键的散列。
+所以这儿的冒号真得不是在引入 pairs，而是引入了该方法的参数列表。在其他任何位置，`:{...}` 会使用两种用法的一种，根据花括号定义的是闭包还是散列。如果被当做闭包， `:{...}` 会创建把空键(null)映射到闭包的 pair。如果被当做散列构造器，那么空键会被忽略，并且 `:{...}` 会创建一个以对象为键的散列而非像没有冒号的 `{...}` 那样创建一个以字符串为键的散列。
 
 胖箭头和副词对儿记法都能用于把具名参数作为项传递给函数或方法。在括号里面带有参数的调用后面，只有副词形式的语法能用于传递额外的参数。这通常用于传递额外的 block:
 
-```perl6
+[source,perl6]
+----
 find($directory) :{ when not /^\./ }
-```
+----
 
 这正好和前面的规则离经叛道，因为副词形式的 block 处于操作符的位置，所以它修改了 "find operator"。(括号不被认为是操作符)
 
@@ -166,13 +173,14 @@ find($directory) :{ when not /^\./ }
 两个更多地副词总是可以捆绑在一块儿。当在参数列表中用作具名参数时，你可能在参数之间放上逗号，因为它们对于函数来说就是普通的具名参数，并且胖箭头形式的参数效果相同。然而，当第一个 pair 出现在项(term)的位置上时，这个逗号才只允许出现。当期望一个中缀操作符时，那个副词总是被看做修改最近的之前的操作符，它没有被隐藏在圆括号中，并且如果你把多个这样的 pairs 作为一个字符串放在一块儿，那么你就不能在它们中间放上逗号，因为那会让之后的 pairs 看起来像项(terms)。（在操作符的位置上一点也不允许胖箭头形式）查看 S06 获取把副词用作具名参数的用法。
 
 
-否定形式(:!a) 和符号形式(:$a, :@a, :%a) 绝对不会接收参数也不关心下一个字符是什么。它们被认为是完备的。这些形式需要一个标识符作为键。包含 twigil 的符号形式不会在键中包含那个 twigil。
+否定形式(`:!a`) 和符号形式(`:$a`, `:@a`, `:%a`) 绝对不会接收参数也不关心下一个字符是什么。它们被认为是完备的。这些形式需要一个标识符作为键。包含 twigil 的符号形式不会在键中包含那个 twigil。
 
 对于接收一个非否定整数参数的标识符，它被允许缩写，例如，把 `:sweet(16)` 缩写为 `:16sweet`。（这个和 `:16<deadbeef>` 形式不一样，后者从来没有字母字符跟在数字后面。）只有字面的非负数字可以这样交换使用。请注意这个缩写允许：
 
-```perl6
+[source,perl6]
+----
 s:2nd/foo/bar/  # or 3rd, 4th, 5th etc.
-```
+----
 
 其它形式的副词（包括裸的 `:a` 形式）总是查找紧紧跟随的用括号括起的参数，并且把它吞噬掉。如果那没有达到预期，那么你必须在副词和开括号之间使用空白。在 Perl 6中单独的副词语法在各处都是相同的。基于参数是需要还是不需要，没有例外。（对于引号副词和 regex 副词有一个小例外，它们只接受圆括号作为它们的括号操作符，并且忽略其它括号，如果需要它们必须被放到括号里。查看上表中得" Paren form"）
 
@@ -226,7 +234,7 @@ $x = (%hash{$x} :delete);
 ($x) = %hash{$x} :delete;
 ----
 
-只有在副词为真的时候元素才会被删除。而 :!delete 本质上是一个空操作；你可以基于传递的诸如 :delete($kill'em) 标记顺带有条件地删除条目。在任何一种情况下，被删除的值会被返回。
+只有在副词为真的时候元素才会被删除。而 `:!delete` 本质上是一个空操作；你可以基于传递的诸如 `:delete($kill'em)` 标记顺带有条件地删除条目。在任何一种情况下，被删除的值会被返回。
 
 你也可以执行存在性测试，要么测试单个条目是否存在，要么测试条目的连接是否存在：
 
@@ -251,7 +259,7 @@ if none %hash<a b c> :exists {...}
 
 你可以使用 `:!exists` 来测试不存在。这特别便捷因为优先级规则让 `!%hash<a> :exists` 把 `:exists` 应用到前缀 `!` 上。 `%hash<a> :!exists` 没有那个问题。
 
-## 组合下标副词
+=== 组合下标副词
 
 像调用中得具名参数那样，下标中处理多个副词是没有顺序之分的。有些组合有意义，例如：
 
