--- a/第十二章-正则表达式.adoc
+++ b/第十二章-正则表达式.adoc
@@ -1,26 +1,8 @@
-
-== 元字符
-
-== 正则字面量
-
-== 注释
-
-== 量词
-
-== 断言
-
-== 分组
-
-== 捕获
-
-== 匹配对象
-
-== 命名捕获
-
+== 正则表达式
 
 正则表达式, 简称 regexes, 是描述文本模式的字符序列。模式匹配就是将这些模式和实际的文本进行匹配的过程。
 
-== 词法约定
+=== 词法约定
 
 Perl 6 正则表达式有特殊的写法:
 
@@ -45,7 +27,7 @@ rx{abc};
 
 通常, 对于 Perl 6 来说, 正则表达式中的注释以 # 号开头, 直至行尾。
 
-== 字面值
+=== 字面值
 
 正则表达式最简单的情况是匹配字符串字面值。
 
@@ -81,9 +63,9 @@ if 'abcdef' ~~ / de / {
 匹配结果存储在 `$/` 变量中并且也从匹配中返回。如果匹配成功, 那么结果就是 link:https://docs.perl6.org/type/Match[Match] 类型, 否则它就是 link:https://docs.perl6.org/type/Nil[Nil]
 
 
-== 通配符和字符类
+=== 通配符和字符类
 
-=== 点号匹配任意字符: .
+==== 点号匹配任意字符: .
 
 在正则表达式中一个未转义的点 `.`  匹配任意单个字符。
 
@@ -106,10 +88,10 @@ if 'abcdef' ~~ / de / {
 
 因为在目标字符串中 `per` 前面没有要匹配的字符。
 
-=== 反斜杠, 预定义字符类
+==== 反斜杠, 预定义字符类
 
 
-=== Unicode properties
+==== Unicode properties
 
 Perl 6 有 `\w` 形式的预定义字符类。大写形式是它的反面, `\W`。
 
@@ -220,7 +202,7 @@ U+2029 PARAGRAPH SEPARATOR
 <xdigit>           十六进制数 [0-9A-Fa-f]
 ----
 
-=== Unicode 属性
+==== Unicode 属性
 
 目前提到的字符类大多是为了方便; 另一种方法是使用 Unicode 字符属性。这些以 `<:property>` 的形式出现, 其中 *property* 可以是短形式的或长形式的 Unicode 一般类别名。它们使用 pair 语法。
 
@@ -306,7 +288,7 @@ Operator	Meaning
 'perl6' ~~ m{\w+(<:Ll+:N>)}  # OUTPUT: «0 => ｢6｣␤» 
 ----
 
-=== 可枚举的字符类和区间
+==== 可枚举的字符类和区间
 
 有时候, 预先存在的通配符和字符类不够用。幸运的是, 定义你自己的字符类相当简单。在 `<[]>` 中, 你可以放入任何数量的单个字符和字符区间(两个端点之间有两个点号), 带有或不带有空白。
 
@@ -336,7 +318,7 @@ Operator	Meaning
 say '"in quotes"' ~~ / '"' <-[ " ]> * '"'/;
 ----
 
-这先匹配一个引号, 然后匹配任何不是引号的字符, 再然后还是一个引号。 上面例子中的 * 和 + 会在 link:https://docs.perl6.org/language/regexes#Quantifiers[量词]一节中解释。
+这先匹配一个引号, 然后匹配任何不是引号的字符, 再然后还是一个引号。 上面例子中的 `*` 和 `+` 会在 link:https://docs.perl6.org/language/regexes#Quantifiers[量词]一节中解释。
 
 就像你可以使用 `-` 用于集合差集和取反单个值一样, 你也可以在前面显式地放上一个 `+`:
 
@@ -345,13 +327,13 @@ say '"in quotes"' ~~ / '"' <-[ " ]> * '"'/;
 / <+[123]> /  # 和 <[123]> 一样
 ----
 
-== 量词
+=== 量词
 
 量词使前面的原子匹配可变次数。例如, `a+` 匹配一个或多个字符 *a*。
 
 量词比连结绑定的更紧, 所以 `ab+` 匹配一个 *a*, 然后跟着一个或多个 *b*。对于引号来说, 有点不同, 所以 `'ab'+` 匹配字符串 *ab*, *abab*, *ababab* 等等。
 
-=== 一次或多次: +
+==== 一次或多次: +
 
 `+` 量词使它前面的原子匹配一次或多次, 没有次数上限。
 
@@ -362,7 +344,7 @@ say '"in quotes"' ~~ / '"' <-[ " ]> * '"'/;
 / \w+ '=' \w+ /
 ----
 
-=== 零次或多次: *
+==== 零次或多次: *
 
 * 量词使它前面的原子匹配零次或多次, 没有次数上限。
 
@@ -373,13 +355,13 @@ say '"in quotes"' ~~ / '"' <-[ " ]> * '"'/;
 / a \s* b /
 ----
 
-=== 零次或一次匹配: ?
+==== 零次或一次匹配: ?
 
 `?` 量词使它前面的原子匹配零次或一次。
 
-=== 常规量词: ** min..max
+==== 常规量词: ** min..max
 
-要限定原子匹配任意次数,　你可以写出像 a ** 2..5 那样的表达式来匹配字符 *a* 至少 2 次, 至多 5 次。
+要限定原子匹配任意次数,　你可以写出像 a ** 2..5 那样的表达式来匹配字符 _a_ 至少 2 次, 至多 5 次。
 
 [source,perl6]
 ----
@@ -420,7 +402,7 @@ say so 'aaa' ~~ /a ** ^6/;        # OUTPUT: «True␤»
 say so 'aaaa' ~~ /a ** 1^..*/;    # OUTPUT: «True␤» -- there are 2 or more 'a's in a row 
 ----
 
-=== 修饰符量词: %
+==== 修饰符量词: %
 
 为了更容易地匹配逗号分割那样的值, 可以在以上任何一个量词的后面加上一个 `%` 修饰符以指定某个分割符必须出现在每一次匹配之间。例如, `a+ % ','` 会匹配 *a*, 或 *a,a* 或 *a,a,a* 等等, 但是不会匹配 *a,* 或 *a,a,* 等。要连这些也要匹配, 那么使用 `%%` 代替 `%`。
 
@@ -429,7 +411,7 @@ say so 'aaaa' ~~ /a ** 1^..*/;    # OUTPUT: «True␤» -- there are 2 or more '
 '12,23,34' ~~ / [\d+]+ % ',' /
 ----
 
-=== 贪婪量词 Vs. 非贪婪量词: ?
+==== 贪婪量词 Vs. 非贪婪量词: ?
 
 默认地, 量词要求进行贪婪匹配:
 
@@ -448,7 +430,7 @@ say so 'aaaa' ~~ /a ** 1^..*/;    # OUTPUT: «True␤» -- there are 2 or more '
 
 你还可以使用 `!` 修饰符显式地要求贪婪匹配。
 
-=== 阻止回溯: :
+==== 阻止回溯: :
 
 你可以在正则表达式中通过为量词附加一个 `:` 修饰符来阻止回溯:
 
@@ -458,7 +440,7 @@ say so 'abababa' ~~ /a .* aba/;    # OUTPUT: «True␤»
 say so 'abababa' ~~ /a .*: aba/;   # OUTPUT: «False␤» 
 ----
 
-== Alternation: ||
+=== Alternation: ||
 
 link:https://docs.perl6.org/language/regexes#Alternation:_||[||] 在正则表达式中表示备选分支, 在匹配由 `||` 分割的几个可能的备选分支之一时, **第一个**匹配的备选分支胜出。例如, *ini* 文件有如下形式:
 
@@ -477,7 +459,7 @@ key = value
 
 即, 它要么是一个由方括号包围起来的单词, 要么是一个键值对。
 
-== Longest Alternation: |
+=== Longest Alternation: |
 
 如果正则表达式由 `|` 分割, 则最长的那个匹配胜出。独立于正则表达式中的词法顺序。
 
@@ -498,7 +480,7 @@ say "barkeeper" ~~ / || @a /;  # ｢bar｣
 
 其中 `/@a/` 和 `/|@a/` 是等价的, 都会被解析成 `/ foo | bar | barkeep /`; 而 `/|| @a/` 会被解析成 `/ foo || bar || barkeep /`。
 
-== 锚点
+=== 锚点
 
 正则表达式引擎尝试在字符串中从左至右地搜索来查找匹配。
 
@@ -512,7 +494,7 @@ say so 'properly' ~~ / perl/;   # OUTPUT: «True␤»
 
 为了整个正则表达式能够匹配, 零宽断言需要被成功地匹配但是零宽断言在匹配时不消耗字符。
 
-=== ^ , 字符串的开头, $ , 字符串的末尾
+==== ^ , 字符串的开头, $ , 字符串的末尾
 
 `^` 断言只匹配字符串的开头:
 
@@ -558,7 +540,7 @@ say so $str ~~ /^Keep   /;   # OUTPUT: «True␤»  -- 'Keep' is at the start of
 say so $str ~~ /^and    /;   # OUTPUT: «False␤» -- 'and' is at the start of a line -- not the string 
 ----
 
-=== ^^ 匹配行的开头, $$ 匹配行的末尾
+==== ^^ 匹配行的开头, $$ 匹配行的末尾
 
 `^^` 断言匹配逻辑行的开头。即, 要么在字符串的开头, 要么在换行符之后。然而, 它不匹配字符串的结尾, 即使它以一个换行符结尾。
 
@@ -588,11 +570,11 @@ say so $str ~~ / scan $$/;        # OUTPUT: «False␤» -- there's a . between 
 say so $str ~~ / '."' $$/;        # OUTPUT: «True␤»  -- at the last line 
 ----
 
-=== <|w> 和 <!|w>, 单词边界
+==== <|w> 和 <!|w>, 单词边界
 
 要匹配单词边界, 使用 `<|w>`。这与其它语言的 `\b` 类似，要匹配一个非单词边界, 使用 `<!|w>`, 类似其它语言的 `\B`。这些都是零宽断言。
 
-=== << 和 >> , 左右单词边界
+==== << 和 >> , 左右单词边界
 
 `<<` 匹配左单词边界。它匹配左侧(或者字符串的开头)是非单词字符而右侧是一个单词字符的位置。
 
@@ -618,7 +600,7 @@ say so $str ~~ /« own/;          # OUTPUT: «False␤»
 say so $str ~~ /own »/;          # OUTPUT: «True␤» 
 ----
 
-== 分组和捕获
+=== 分组和捕获
 
 在普通的(非正则表达式)Perl 6 代码中, 你可以使用圆括号把东西组织到一块, 通常用于覆盖操作符优先级:
 
@@ -645,11 +627,11 @@ say (1+4)*2; # 输出: 10
 / (a || b)+ /; # 匹配一个 'a' 序列或者 'b' 序列, 至少一次
 ----
 
-一个非量词化的捕获产生一个 link:https://docs.perl6.org/type/Match[Match] 对象。当捕获被量化(除了使用 ? 量词)之后, 该捕获就变成 link:https://docs.perl6.org/type/Match[Match] 对象的列表。
+一个非量词化的捕获产生一个 link:https://docs.perl6.org/type/Match[Match] 对象。当捕获被量词化(除了使用 `?` 量词)之后, 该捕获就变成 link:https://docs.perl6.org/type/Match[Match] 对象的列表。
 
-=== 捕获
+==== 捕获
 
-圆括号不仅仅能够分组, 它们也*捕获*; 也就是说, 它们使分组中匹配到的字符串用作变量，并且还作为生成的  link:https://docs.perl6.org/type/Match[Match] 对象的元素:
+圆括号不仅仅能够分组, 它们也 *捕获*; 也就是说, 它们使分组中匹配到的字符串用作变量，并且还作为生成的  link:https://docs.perl6.org/type/Match[Match] 对象的元素:
 
 [source,perl6]
 ----
@@ -681,7 +663,7 @@ if 'abc' ~~ /(a) b (c)/ {
 }
 ----
 
-=== 非捕获分组
+==== 非捕获分组
 
 正则表达式中的圆括号扮演了双重角色: 它们将内部的正则表达式元素分组, 并通过内部的子正则表达式捕获所匹配到的内容。
 
@@ -696,7 +678,7 @@ if 'abc' ~~ / [a||b] (c) / {
 
 如果您不需要捕获, 则使用非捕获分组可提供三个好处: 它们更干净地传达正则表达式; 它们使您更容易对您关心的捕获组计数; 并且它匹配比较快。
 
-=== 捕获编号
+==== 捕获编号
 
 上面已经说明，捕获从左到右编号。 原则上是真的，这也是过于简单的。
 
@@ -741,7 +723,7 @@ if 'abc' ~~ / ( a (.) (.) ) / {
 }
 ----
 
-=== 命名捕获
+==== 命名捕获
 
 除了给捕获编号，你也可以给他们起名字。 命名捕获的通用和略微冗长的方式是这样的：
 
@@ -784,11 +766,11 @@ if 'count=23' ~~ / $<variable>=\w+ '=' $<value>=\w+ / {
 
 在 Subrules 部分会讨论获取命名捕获的更方便的方法。
 
-=== 捕获标记: <( )>
+==== 捕获标记: <( )>
 
 `<(` token 表示匹配的整体捕捉的开始，而相应的 `)>` token 表示其末端。 `<(` 类似于其他语言的 `\K` 丢弃 `\K` 之前找到的任何匹配项。
 
-== 替换
+=== 替换
 
 正则表达式也可以用来替换另一个文本。 您可以使用它来解决拼写错误(例如, 用 "Pearl Jam" 替换 "Perl Jam"), 从 `yyyy-mm-ddThh:mm:ssZ` 到 `mm-dd-yy h:m {AM,PM}` 重新格式化 ISO8601 日期及其它。
 
@@ -828,7 +810,7 @@ s/Replace/Entrap/;
 .say;                    # OUTPUT: «The Entrapments␤» 
 ----
 
-字母数字字符和下划线是文字匹配，就像其表哥 `m//` 操作符一样。 所有其他字符都必须使用反斜杠`\`转义，或包含在引号中：
+字母数字字符和下划线是文字匹配，就像其表哥 `m//` 操作符一样。 所有其他字符都必须使用反斜杠 `\` 转义，或包含在引号中：
 
 [source,perl6]
 ----
@@ -859,7 +841,7 @@ s/\d+/7/;         # replace any sequence of digits with '7'
 .say;             # OUTPUT: «Blake's 7␤»
 ----
 
-当然，你可以使用任何`+`，`*`和`?` 修饰符，它们的行为就像在 `m//` 操作符的上下文中一样。
+当然，你可以使用任何 `+`，`*` 和 `?` 修饰符，它们的行为就像在 `m//` 操作符的上下文中一样。
 
 === 捕获组
 
@@ -895,7 +877,7 @@ s/(\d+)\:(\d+)/{$0 % 12}\:$1 {$0 < 12 ?? 'AM' !! 'PM'}/;
 使用上面的模数 `%` 运算符将样本代码保留在80个字符以下，否则就是 `$0 <12 ?? $0 !! $0 - 12`。 结合解析器表达式语法的强大功能，真正使您在这里看到的内容成为可能，您可以使用“正则表达式”来解析任何文本。
 
 
-== 用于嵌套结构的波浪号
+=== 用于嵌套结构的波浪号
 
 `~` 运算符是一个帮助器，用于匹配具有特定终结符的嵌套子规则作为目标。 它被设计为放置在开口和闭合括号之间，如下所示：
 
@@ -954,7 +936,7 @@ say $1; # OUTPUT: «｢b｣␤»
 ----
 
 
-== Subrules
+=== Subrules
 
 就像你可以把代码片段放进子例程中一样, 你同样可以把正则表达式片段放进命名规则中(named rules)。
 
@@ -1009,7 +991,7 @@ say %config.perl;
 
 命名正则可以规整到 link:https://docs.perl6.org/language/grammars[gramamrs] 中。link:https://design.perl6.org/S05.html#Predefined_Subrules)[S05-regex] 中有一组预定义的 subrules。
 
-== 副词
+=== 副词
 
 副词修改正则表达式的工作方式, 并为某些类型的循环任务提供方便的快捷方式。
 
@@ -1044,9 +1026,9 @@ for 'baA'.match($regex, :overlap) -> $m {
 
 例如: `:ignorecase (:i)` 副词告诉编译器忽略大写, 小写和标题大小写字母之间的区别。
 
-所以 `'a'~~ /A/` 是假的, 但 `'a' ~~ /:i A /是一个成功的匹配。
+所以 `'a'~~ /A/` 是假的, 但 `'a' ~~ /:i A /` 是一个成功的匹配。
 
-正则表达式副词可以在正则表达式声明之前或之内, 并且仅在词法上影响其后的正则表达式部分。 请注意, 在正则表达式之前出现的正则表达式副词必须出现在将正则表达式引入解析器之后, 如 'rx' 或 'm' 或裸的 '/'。 但是这样是无效的:
+正则表达式副词可以在正则表达式声明之前或之内, 并且仅在词法上影响其后的正则表达式部分。 请注意, 在正则表达式之前出现的正则表达式副词必须出现在将正则表达式引入解析器之后, 如 `rx` 或 `m` 或裸的 `/`。 但是这样是无效的:
 
 [source,perl6]
 ----
@@ -1077,7 +1059,7 @@ my $rx4 = rx/:i a b/;   # matches completely case insensitively
 / [:i a b] c /;         # matches 'ABc' but not 'ABC' 
 ----
 
-=== Ratchet
+==== Ratchet
 
 `:ratchet` 或 `:r` 副词会导致正则表达式引擎不回溯。
 
@@ -1089,7 +1071,7 @@ say so 'abc' ~~ / \w+ . /;        # OUTPUT: «True␤»
 say so 'abc' ~~ / :r \w+ . /;     # OUTPUT: «False␤» 
 ----
 
-Ratcheting 是一种优化, 因为回溯是昂贵的。 但更重要的是, 它与人类解析文本的方式密切相关。 如果你有一个正则表达式 `my regex identifier { \w+ } ` 和 `my regex keyword { if | else | endif }`, 你直观地期望 `identifier` 吞噬整个单词，而不是放弃结束下一个规则，如果下一个 rule 失败时。
+Ratcheting 是一种优化, 因为回溯是昂贵的。 但更重要的是, 它与人类解析文本的方式密切相关。 如果你有一个正则表达式 `my regex identifier { \w+ }` 和 `my regex keyword { if | else | endif }`, 你直观地期望 `identifier` 吞噬整个单词，而不是放弃结束下一个规则，如果下一个 rule 失败时。
 
 例如，你不想让单词 `motif` 被解析为标识符 mot 后面跟着关键字 if。 相反, 你想将 `motif` 解析为标识符; 并且如果解析器期望之后有一个 `if`, 那么最好让它失败, 而不是以你不期望的方式解析输入。
 
@@ -1102,7 +1084,7 @@ my token thing { .... }
 my regex thing { :r ... }
 ----
 
-=== Sigspace
+==== Sigspace
 
 `:sigspace` 或 `:s` 副词使空白在正则表达式中有意义。
 
@@ -1117,7 +1099,7 @@ say so "I used Photoshop®"   ~~ m:i:s/ photo shop /;   # OUTPUT: «False␤»
 
 正则表达式中哪里的空白会被转换为 `<.ws>` 取决于空白前面是什么。在上面的例子中, 正则表达式开头的空白不会被转换为 `<.ws>`, 但是字符后面的空白会被转换为 `<.ws>`。通常, 规则就是, 如果某一项可能匹配某个东西, 那么它后面的空白会被转换为 `<.ws>`。
 
-此外, 如果空白跟在某个 term 之后, 量词(+,* 或 ?)之前, 那么 `<.ws>` 会在每次 term 匹配后匹配。 所以, `foo +` 变为 `[foo <.ws>]+`。另一方面, 量词后面的空白和普通的空白作用一样; 例如: "foo+" 变为 `foo+<.ws>`
+此外, 如果空白跟在某个项之后, 量词(`+`,`*` 或 `?`)之前, 那么 `<.ws>` 会在每次 term 匹配后匹配。 所以, `foo +` 变为 `[foo <.ws>]+`。另一方面, 量词后面的空白和普通的空白作用一样; 例如: `foo+` 变为 `foo+<.ws>`。
 
 === Matching adverbs
 
@@ -1125,7 +1107,7 @@ say so "I used Photoshop®"   ~~ m:i:s/ photo shop /;   # OUTPUT: «False␤»
 
 它们永远不会出现在正则表达式内部, 只能在外部 - 作为 `m/.../` 匹配的一部分或作为匹配方法的参数。
 
-=== Continue
+==== Continue
 
 `:continue` 或短的 `:c` 副词接收一个参数。 这个参数是正则表达式开始搜索的位置。 默认情况下, 它从字符串的开头搜索, 但是 `:c` 覆盖该位置。 如果没有为 `:c` 指定位置, 它将默认为 0, 除非设置了 `$/`, 在这种情况下, 它默认为 `$/.to`。
 
@@ -1145,7 +1127,7 @@ say "abcdefg" ~~ m:c(3)/e.+/; # OUTPUT: «｢efg｣␤»
 say "abcdefg" ~~ m:p(3)/e.+/; # OUTPUT: «False␤» 
 ----
 
-=== Exhaustive
+==== Exhaustive
 
 要找到正则表达式的所有可能的匹配 - 包括重叠的 - 和几个从同一位置开始的匹配, 请使用 `:exhaustive`(short: `ex`) 副词。
 
@@ -1173,7 +1155,7 @@ abra
        abra
 ----
 
-=== Global
+==== Global
 
 不是搜索一个匹配并返回一个 link:https://docs.perl6.org/type/Match[Match 对象], Global 搜索每个不重叠的匹配, 并将其返回到link:https://docs.perl6.org/type/List)[列表]中。 为此, 请使用 `:global` 副词:
 
@@ -1188,7 +1170,7 @@ given 'several words here' {
 
 `:g` 是 `:global` 的简写。
 
-=== Pos
+==== Pos
 
 在字符串的特定位置锚定匹配:
 
@@ -1211,7 +1193,7 @@ say "abcdefg" ~~ m:c(3)/e.+/; # OUTPUT: «｢efg｣␤»
 say "abcdefg" ~~ m:p(3)/e.+/; # OUTPUT: «False␤» 
 ----
 
-=== Overlap
+==== Overlap
 
 要获得多个匹配, 包括重叠的匹配, 但每个起始位置只有一个(最长的)匹配, 请指定 `:overlap` (short `:ov`) 副词:
 
@@ -1234,9 +1216,9 @@ abracadabra
        abra
 ----
 
-== 环视断言
+=== 环视断言
 
-=== 向前查看断言
+==== 向前查看断言
 
 要检查一个模式是否出现在另一个模式之前，请通过 `before` 断言使用 lookahead 断言。形式如下：
 
@@ -1273,7 +1255,7 @@ say "foobar" ~~ rx{ foo <?before bar> };   # OUTPUT: «foo␤»
 rx{ foo <!before bar> }
 ----
 
-=== 向后查看断言
+==== 向后查看断言
 
 要检查一个模式是否出现在另一个模式之后，请通过 `after` 断言使用 `lookbehind` 断言。 其形式如下：
 
@@ -1310,11 +1292,11 @@ say "foobar" ~~ rx{ <?after foo> bar }; #  OUTPUT: «bar␤»
 rx{ <!after foo> bar }
 ----
 
-== 最佳实践和陷阱
+=== 最佳实践和陷阱
 
 为了提供强大的正则表达式和 Grammar，这里有一些代码布局和可读性的最佳实践，实际匹配的内容，以及避免常见的陷阱。
 
-=== 代码布局
+==== 代码布局
 
 如果没有 `:sigspace` 副词，在 Perl 6 正则表达式中空格并不重要。 使用它自己的优势，并插入空格，增加可读性。 此外，必要时插入注释。
 
@@ -1357,7 +1339,7 @@ my regex example {
 }
 ----
 
-=== 保持短小
+==== 保持短小
 
 正则代码通常比常规代码更紧凑。 因为他们用这么少的字符就做得那么多，所以保持了正则表达式的简短。
 
@@ -1407,7 +1389,7 @@ my regex float {
 }
 ----
 
-=== 要匹配什么
+==== 要匹配什么
 
 输入数据格式通常没有明确的规范，或者程序员不知道规范。 然后，按照你的期望自由是好的，但只要没有可能的含糊之处。
 
@@ -1418,7 +1400,7 @@ my regex float {
 key=value
 ----
 
-section 标题内可以有什么内容？ 只允许一个词可能限制性太强。 有人可能会写`[two words]`，或使用破折号等。而不是问内部允许什么，可能值得问一下：什么是不允许的？
+section 标题内可以有什么内容？ 只允许一个词可能限制性太强。 有人可能会写 `[two words]`，或使用破折号等。而不是问内部允许什么，可能值得问一下：什么是不允许的？
 
 显然，不允许闭合方括号，因为 `[a]b]` 是不明确的。 根据同一论点，应禁止开口方括号。 这让我们失望了
 
@@ -1443,7 +1425,7 @@ token header { '[' <-[ \[\] \n ]>+ ']' }
 
 然后，在后处理中，从 section 标题中删除前导和尾随空格和制表符。
 
-=== 匹配空白
+==== 匹配空白
 
 `:sigspace` 副词（或使用 `rule` 声明符而不是 `token` 或 `regex`）非常便于隐式解析可能出现在许多地方的空格。
 
@@ -1512,3 +1494,4 @@ token ws { <!ww> \h* }
 在进行隐式空格分析的时候会调用该 token。 当它不在两个单词字符之间（ `<!ww>`，"在单词中"的否定断言）和零个或多个水平空格字符之间匹配。 对水平空格的限制很重要，因为换行符（垂直空格）会分隔记录，不应被隐式匹配。
 
 不过，潜伏着一些与空白相关的麻烦。 正则表达式 `\n+` 与 `\n \n` 之类的字符串不匹配，因为两个换行符之间有空白。 要允许此类输入字符串，请将 `\n+` 替换为 `\n\s*`。
+
