--- a/第十八章-主题变量.adoc
+++ b/第十八章-主题变量.adoc
@@ -1,7 +1,7 @@
 
-== $_ 变量
+== 主题变量
 
-`$\_` 是主题变量。它是*没有显式签名的块*的默认参数，因此 `for @array {...}` 和 `given $var {...}` 这样的构造通过调用块绑定到 `$_`。
+`$\_` 是主题变量。它是 *没有显式签名的块* 的默认参数，因此 `for @array {...}` 和 `given $var {...}` 这样的构造通过调用块绑定到 `$_`。
 
 
 === for
