--- a/第十六章-输入和输出.adoc
+++ b/第十六章-输入和输出.adoc
@@ -1,17 +1,19 @@
-== 标准输入
+== 标准输入和标准输出
 
-== 标准输出
+=== 标准输入
 
-== IO 对象
+=== 标准输出
 
-== get
+=== IO 对象
 
-== 文件句柄
+=== get
 
-== $*IN 
+=== 文件句柄
 
-== $*OUT
+=== $*IN 
 
-== $*ARGV 
+=== $*OUT
 
-== $*ARGVFILES?
+=== $*ARGV 
+
+=== $*ARGVFILES?
