--- a/第十四章-并发.adoc
+++ b/第十四章-并发.adoc
@@ -1,10 +1,12 @@
-== Sluppy
+== 并发
 
-== Channel
+=== Sluppy
 
-== react/whenever
+=== Channel
 
-== race
+=== react/whenever
 
-== hyper
+=== race
+
+=== hyper
 
