--- a/第二十一章-模块.adoc
+++ b/第二十一章-模块.adoc
@@ -1,18 +1,16 @@
-== 模块结构
+== 模块
 
-== 模块创建
+=== 模块结构
 
-== 模块调试
+=== 模块创建
 
-== 模块打包
+=== 模块调试
 
-== 模块发布
+=== 模块打包
 
+=== 导出和选择性导出
 
-
-== 导出和选择性导出
-
-=== is export
+==== is export
 
 packages(包), subroutines(子例程), variables(变量), constants(常量) 和 enums(枚举) , 通过在它们的名字后面添加 `is export` 特性来导出。
 
@@ -63,7 +61,7 @@ use MyModule :night;    #pants, torch
 use MyModule :ALL;      #bag, pants, sunglasses, torch, underpants
 ----
 
-=== UNIT::EXPORT::*
+==== UNIT::EXPORT::*
 
 表象之下, 其实 `is export` 是把符号添加到 `EXPORT` 命名空间中的 `UNIT` 作用域包中。例如, `is export(:FOO)` 会把目标添加到 `UNIT::EXPORT::FOO` 包中。这正是 Perl 6 决定导入什么所做的。
 
@@ -114,7 +112,7 @@ say sqrt-of-four; #-> 2
 say log-of-zero;  #-> -Inf
 ----
 
-=== EXPORT
+==== EXPORT
 
 你可以用一个 `EXPORT` 子例程导出任意符号。 `EXPORT` 必须返回一个 `Map`, 在 map 里面键是符号名, 键值是想要的值。符号名应该包含(如果有的话)关联类型。
 
@@ -176,7 +174,7 @@ always();      # OK   - is imported
 shy();         # FAIL - won't be imported
 ----
 
-== 发布模块
+=== 发布模块
 
 如果你已经写了一个 Perl 6模块, 你想把它分享到社区, 我们会很高兴地把它放到 Perl 6 模块文件夹清单中。link:http://modules.perl6.org/[Perl 6 modules directory]
 
@@ -211,11 +209,11 @@ shy();         # FAIL - won't be imported
 
   - `README.md` 文件是一个 markdown 格式的文件, 它稍后会被 Github 自动渲染成 HTML
 
-  - 关于 LICENSE 文件, 如果你没有其它选择, 就是用和 Rakudo Perl 6 一样的 LICENSE 把。仅仅把它的原始 [license](https://github.com/rakudo/rakudo/blob/nom/LICENSE) 复制/粘贴进你自己的 LICENSE 文件中。
+  - 关于 LICENSE 文件, 如果你没有其它选择, 就是用和 Rakudo Perl 6 一样的 LICENSE 把。仅仅把它的原始 link:https://github.com/rakudo/rakudo/blob/nom/LICENSE[license] 复制/粘贴进你自己的 LICENSE 文件中。
 
   - 如果你还没有任何测试, 现在你可以忽略 `t` 目录 和 `basic.t` 文件。关于如何写测试, 你可以看看其它模块是怎么使用 `Test` 的。它和 Perl'5 的 `Test::More` 很类似。
 
-  - 如果要文档化你的模块, 在你的模块中使用 [Perl 6 Pod](http://design.perl6.org/S26.html) 标记。欢迎给模块写文档, 并且为了浏览的方便, 一旦 Perl 6 module directory(或其它网站) 开始把 Pod 文档渲染成 HTML, 写文档尤为重要。
+  - 如果要文档化你的模块, 在你的模块中使用 link:http://design.perl6.org/S26.html[Perl 6 Pod] 标记。欢迎给模块写文档, 并且为了浏览的方便, 一旦 Perl 6 module directory(或其它网站) 开始把 Pod 文档渲染成 HTML, 写文档尤为重要。
 
   - 让你的 `META.info` 文件看起来像这样:
 
@@ -231,7 +229,7 @@ shy();         # FAIL - won't be imported
             "source-url"  : "git://github.com/you/Vortex-TotalPerspective.git"
         }
 
-关于选择版本号的方案, 或许使用 "major.minor.patch" （查看  the spec on versioning 获取详细信息 ）。如果版本号现在对你或你的用户来说不重要, 你可以给版本那儿放上一颗星(*)。
+关于选择版本号的方案, 或许使用 "major.minor.patch" （查看  the spec on versioning 获取详细信息 ）。如果版本号现在对你或你的用户来说不重要, 你可以给版本那儿放上一颗星(`*`)。
 
 在 `provides` 一节, 包含进你的发布中提供的所有命名空间。
 
@@ -240,3 +238,5 @@ shy();         # FAIL - won't be imported
     - 把你的工程推送到 Github
     - 在 IRC 频道找个人帮你展示怎么把你的模块添加到 link:https://github.com/perl6/ecosystem[ecosystem], 或者让他们是否能替你添加。
     - pull 请求被接收之后, 等个把小时。如果你的模块没有出现在  http://modules.perl6.org/ , 请到 http://modules.perl6.org/log/update.log 翻看log 日志文件, 以查找是否有错误。
+
+
