--- a/第二十章-解构.adoc
+++ b/第二十章-解构.adoc
@@ -130,7 +130,7 @@ Number
 String
 ----
 
-因为 `=>` 构造了一个 link:http://doc.perl6.org/type/Pair[Pair]，它有一个 `key` 和一个 `value` 属性。子签名中的 `:$key` 命名参数提取属性 `key`。 `*%` 中的 `%` 是匿名的, `*%` 接收所有剩余参数到一个匿名散列中, 不予使用。
+因为 `=>` 构造了一个 link:http://doc.perl6.org/type/Pair[Pair]，它有一个 `key` 和一个 `value` 属性。子签名中的 `:$key` 命名参数提取属性 `key`。 `\*%` 中的 `%` 是匿名的, `*%` 接收所有剩余参数到一个匿名散列中, 不予使用。
 
 [source,perl6]
 .anonymous hash deconstruction
@@ -189,7 +189,7 @@ perl6 timicles.pl6 1d 2h 3m 5s
 对象解包为它们的属性只是默认行为. 要使对象以另外的方式解构, 要更改它的 link:https://docs.perl6.org/routine/Capture[Capture].
 
 
-== 解构 JSON
+=== 解构 JSON
 
 相当不错，但如果你有**更**复杂的东西呢？
 
@@ -223,7 +223,7 @@ sub myfunc(% (:%book (Str:D :$title, Str:D :$author), Int :$count,
 
 现在，在函数体中，我可以将这些部分引用为 `$title`，`$author`，`$count`和 `@tags`。 为了方便起见，我还将标签分成了 `$first-tag` 和 `@other-tags`。
 
-== 在块儿中使用签名
+=== 在块儿中使用签名
 
 当然，签名对于子程序来说是幻想的，但是你也可以在块儿(Block)中使用签名和解构。 假设你有一个上面的 JSON 条目的数组，并希望通过一个 `for` 循环遍历它们？ 只需在 `for` 的尖号块中使用解构签名即可：
 
@@ -239,7 +239,7 @@ for @itemlist -> % (:%book (Str:D :$title, Str:D :$author), Int :$count,
 
 注意在这种情况下，我甚至不需要散列本身，所以我省略了散列的名称，仅使用 `％` 作为匿名散列（关联）。
 
-== 你甚至可以解构对象!
+=== 解构对象
 
 你有没有试过遍历一组对象，你所做的第一件事是调用一些访问器来获取一些属性？ 当然，你可以使用 `.attribute` 和 主题化的迭代器，但是使用子签名，你可以做更多。
 
@@ -298,6 +298,6 @@ person's-age-and-legs                         # Call function declared above ...
 
 如果您想检查类型或定义，或设置默认值，您都可以在签名中正确地执行。 如果您不喜欢对象属性的名称，则可以使用别名来重命名它们, 你开心就行。
 
-== 结论
+我发现解构参数在与数据库查询结果和 JSON 交互中非常有用。 您可以使用任何其他签名特性，包括指定类型，定义，可选性，默认值，使用别名重命名，使用子集约束或“where”从句，slurpies 等。
 
-我发现解构参数在与数据库查询结果和 JSON 交互中非常有用。 您可以使用任何其他签名特性，包括指定类型，定义，可选性，默认值，使用别名重命名，使用子集约束或“where”从句，slurpies等。
+
