--- a/第五章-散列.adoc
+++ b/第五章-散列.adoc
@@ -1,4 +1,6 @@
-== 散列操作
+== 散列
+
+=== 散列操作
 
 [source,perl6]
 ----
@@ -48,7 +50,7 @@ say %dev.push(@pairs);         # 插入一组 pair 对儿, 如果某个键已经
 # ("pugs" => ["audreyt", "audreyt"], "pct" => ["pm", "pm"], "STD" => ["larry", "larry"]).hash
 ----
 
-== 散列解构
+=== 散列解构
 
 你可以解构散列, 解构的语法是：
 
@@ -81,4 +83,4 @@ key-of(%hash); # the same (for an equivalent `%hash`);
 ----
 
 
-== 散列副词
+=== 散列副词
